--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -136,6 +136,7 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
+allow 151.243.213.150;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
@@ -211,6 +212,7 @@ allow 176.65.151.193;
 allow 176.65.151.194;
 allow 176.9.3.9;
 allow 176.97.114.202;
+allow 177.149.157.33;
 allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
@@ -923,12 +925,10 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.3;
+allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1232,9 +1232,9 @@ allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
-allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1517,6 +1517,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
@@ -1590,6 +1591,7 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
+allow 2a12:bec4:1821:3a6::a;
 allow 2a12:bec4:1821:3a7::a;
 allow 2a12:bec4:1821:3a8::a;
 allow 2a12:de40:21:1be4::;
@@ -1754,6 +1756,7 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1773,7 +1776,6 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
-allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
@@ -1810,6 +1812,7 @@ allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 77.85.151.105;
 allow 78.142.18.219;
 allow 78.153.150.25;
 allow 78.159.131.103;
@@ -1885,6 +1888,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
