--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,7 +122,6 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -132,6 +131,7 @@ allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
+allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
@@ -290,7 +290,6 @@ allow 2620:18c:0:192::e0:195;
 allow 2620:18c:0:192::e0:196;
 allow 2620:18c:0:192::e0:197;
 allow 2620:18c:0:192::e0:198;
-allow 2620:18c:0:192::e0:199;
 allow 2620:18c:0:192::e0:200;
 allow 2620:18c:0:192::e0:201;
 allow 2620:18c:0:192::e0:202;
@@ -660,6 +659,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:ca80:619:c3b8::1;
 allow 2a0f:ca80:619:e915::1;
