--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -868,7 +868,6 @@ set_real_ip_from 23.129.64.195;
 set_real_ip_from 23.129.64.196;
 set_real_ip_from 23.129.64.197;
 set_real_ip_from 23.129.64.198;
-set_real_ip_from 23.129.64.199;
 set_real_ip_from 23.129.64.200;
 set_real_ip_from 23.129.64.201;
 set_real_ip_from 23.129.64.202;
@@ -902,7 +901,6 @@ set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.190.216.8;
 set_real_ip_from 23.191.200.10;
@@ -923,12 +921,10 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -959,7 +955,6 @@ set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::2000:34ff:fe4d:7faf;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
@@ -969,6 +964,7 @@ set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
+set_real_ip_from 2602:fa86::be24:11ff:fe70:fc41;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1127,7 +1123,6 @@ set_real_ip_from 2620:18c:0:192::e0:195;
 set_real_ip_from 2620:18c:0:192::e0:196;
 set_real_ip_from 2620:18c:0:192::e0:197;
 set_real_ip_from 2620:18c:0:192::e0:198;
-set_real_ip_from 2620:18c:0:192::e0:199;
 set_real_ip_from 2620:18c:0:192::e0:200;
 set_real_ip_from 2620:18c:0:192::e0:201;
 set_real_ip_from 2620:18c:0:192::e0:202;
@@ -1498,6 +1493,7 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:231b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
+set_real_ip_from 2a0f:85c1:356:5a46::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
 set_real_ip_from 2a0f:ca80:619:c3b8::1;
 set_real_ip_from 2a0f:ca80:619:e915::1;
@@ -1795,6 +1791,7 @@ set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.113.221;
 set_real_ip_from 64.94.85.248;
+set_real_ip_from 65.87.7.198;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
