--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -191,6 +191,7 @@ set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
+set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
@@ -511,7 +512,6 @@ set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.159.99.168;
 set_real_ip_from 192.159.99.74;
 set_real_ip_from 192.210.136.31;
-set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
 set_real_ip_from 192.42.116.15;
 set_real_ip_from 192.42.116.17;
@@ -694,7 +694,6 @@ set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:289c:4::81;
 set_real_ip_from 2001:67c:289c:4::82;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
@@ -868,6 +867,7 @@ set_real_ip_from 23.129.64.195;
 set_real_ip_from 23.129.64.196;
 set_real_ip_from 23.129.64.197;
 set_real_ip_from 23.129.64.198;
+set_real_ip_from 23.129.64.199;
 set_real_ip_from 23.129.64.200;
 set_real_ip_from 23.129.64.201;
 set_real_ip_from 23.129.64.202;
@@ -921,8 +921,11 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -1123,6 +1126,7 @@ set_real_ip_from 2620:18c:0:192::e0:195;
 set_real_ip_from 2620:18c:0:192::e0:196;
 set_real_ip_from 2620:18c:0:192::e0:197;
 set_real_ip_from 2620:18c:0:192::e0:198;
+set_real_ip_from 2620:18c:0:192::e0:199;
 set_real_ip_from 2620:18c:0:192::e0:200;
 set_real_ip_from 2620:18c:0:192::e0:201;
 set_real_ip_from 2620:18c:0:192::e0:202;
