--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -208,9 +208,7 @@ set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
-set_real_ip_from 176.65.151.192;
 set_real_ip_from 176.65.151.193;
-set_real_ip_from 176.65.151.194;
 set_real_ip_from 176.9.3.9;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.149.157.33;
@@ -579,6 +577,7 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
+set_real_ip_from 193.237.155.109;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.123;
@@ -924,7 +923,7 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -1236,6 +1235,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1753,6 +1753,7 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
