--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -27,6 +27,7 @@ allow 2001:470:1f06:2b4::2;
 allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
+allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2044:c141:0:1:6431:1;
 allow 2001:67c:2608::1;
@@ -116,7 +117,6 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
-allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -430,7 +430,6 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
