--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -223,7 +223,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
-allow 2620:18c:0:192::99;
 allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
@@ -430,6 +429,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
