--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -223,7 +223,6 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:f530:9002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
-set_real_ip_from 2620:18c:0:192::99;
 set_real_ip_from 2620:18c:0:192::e0:130;
 set_real_ip_from 2620:18c:0:192::e0:131;
 set_real_ip_from 2620:18c:0:192::e0:132;
@@ -430,6 +429,7 @@ set_real_ip_from 2a06:1700:1:108::b829:eee2;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
