--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -72,6 +72,9 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:191;
 allow 2001:67c:e60:c0c:192:42:116:192;
 allow 2001:67c:e60:c0c:192:42:116:193;
@@ -394,6 +397,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -470,7 +474,6 @@ allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::140;
-allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
@@ -683,7 +686,6 @@ allow 2a12:a800:11:1:124:198:132:13;
 allow 2a12:a800:11:1:124:198:132:172;
 allow 2a12:a800:11:1:124:198:132:237;
 allow 2a12:a800:11:1:124:198:132:52;
-allow 2a12:a800:11:1:192:159:99:168;
 allow 2a12:a800:11:1:192:159:99:74;
 allow 2a12:a800:1:1:194:26:192:177;
 allow 2a12:a800:1:1:194:26:192:77;
@@ -719,6 +721,7 @@ allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:200;
+allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:238;
 allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:40;
